--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: A-Monograph-of-the-Trilobites-of-North-America-with-Coloured-Models-of-the-Species_66333
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 66333-h/images/cover_epub.jpg
 creator:
   author:
     agent_name: Green, J. D. (Jacob D.)
@@ -8,6 +11,8 @@ creator:
     gutenberg_agent_id: '5870'
     url: http://www.gutenberg.org/2009/agents/5870
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/66333#A-Monograph-of-the-Trilobites-of-North-America-with-Coloured-Models-of-the-Species
 gutenberg_issued: '2021-09-18'
 identifiers:
   gutenberg: '66333'
